# low-latency-tick-to-trade

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  coding_standard.md
.github/workflows/: cpp-ci.yml
apps/: CMakeLists.txt
apps/shared/: protocol.hpp  protocol_codec.hpp  tick_data.hpp
apps/simulated_exchange/: CMakeLists.txt  exchange_core.hpp  exchange_engine_main.cpp  exchange_event.hpp  exchange_gateway_main.cpp  exchange_md_main.cpp  main.cpp  market_data_publisher.hpp  message_codec_framer.hpp  order_gateway.hpp  replay_order_gateway.hpp  shared_exchange_queue.hpp  tick_file_reader.hpp
apps/tick_to_trade/: CMakeLists.txt  feed_handler.hpp  latency_tracker.hpp  main.cpp  md_ctx.hpp  md_feed_thread.hpp  md_types.hpp  order_manager.hpp  order_response_handler.hpp  order_send_handler.hpp  order_types.hpp  pipeline_log_entry.hpp  pipeline_log_formatter.hpp  pipeline_log_push.hpp  spread_strategy.hpp  strategy_ctx.hpp  strategy_policy.hpp  strategy_thread.hpp  tcp_connection.hpp
bench/: CMakeLists.txt  bench_utils.cpp  bench_utils.hpp
bench/libs/: CMakeLists.txt
bench/libs/algo/: CMakeLists.txt  matching_engine_bench.cpp  matching_engine_gbench.cpp  order_book_bench.cpp  order_book_gbench.cpp
bench/libs/ds/: CMakeLists.txt  hash_map_bench.cpp  hash_map_gbench.cpp  index_free_stack_bench.cpp  index_free_stack_gbench.cpp  intrusive_list_bench.cpp  intrusive_list_gbench.cpp  ring_buffer_bench.cpp  ring_buffer_gbench.cpp  timing_wheel_bench.cpp  timing_wheel_gbench.cpp
bench/libs/net/: CMakeLists.txt  length_prefix_codec_bench.cpp  length_prefix_codec_gbench.cpp  message_codec_bench.cpp  message_codec_gbench.cpp  packed_codec_bench.cpp  packed_codec_gbench.cpp  wire_codec_bench.cpp  wire_codec_gbench.cpp
bench/libs/sys/: CMakeLists.txt  arena_allocator_bench.cpp  arena_allocator_gbench.cpp  async_logger_bench.cpp  bit_utils_bench.cpp  bit_utils_gbench.cpp  endian_bench.cpp  endian_gbench.cpp  intrusive_lock_free_stack_bench.cpp  intrusive_lock_free_stack_gbench.cpp  lock_free_stack_bench.cpp  lock_free_stack_gbench.cpp  mmap_region_bench.cpp  mmap_region_gbench.cpp  nano_clock_bench.cpp  nano_clock_gbench.cpp  object_pool_bench.cpp  object_pool_gbench.cpp  signal_logger_bench.cpp  signal_logger_gbench.cpp  single_thread_stack_bench.cpp  single_thread_stack_gbench.cpp  spsc_queue_bench.cpp  spsc_queue_gbench.cpp  xorshift64_bench.cpp  xorshift64_gbench.cpp
libs/: CMakeLists.txt
libs/algo/: CMakeLists.txt  matching_engine.hpp  order_book.hpp  trading_types.hpp
libs/ds/: CMakeLists.txt  fixed_hash_map.hpp  fixed_index_free_stack.hpp  fixed_latency_histogram.hpp  fixed_latency_recorder.hpp  fixed_ring_buffer.hpp  fixed_timing_wheel.hpp  hash_map.hpp  hash_utils.hpp  index_free_stack.hpp  intrusive_list.hpp  ring_buffer.hpp  timing_wheel.hpp
libs/net/: CMakeLists.txt  epoll_wrapper.hpp  length_prefix_codec.hpp  message_codec.hpp  packed_codec.hpp  scoped_fd.hpp  socket_base.hpp  tcp_server.hpp  tcp_socket.hpp  udp_socket.hpp  udp_socket_concept.hpp  wire_reader.hpp  wire_writer.hpp
libs/sys/: CMakeLists.txt  bit_utils.hpp  endian.hpp  hardware_constants.hpp  nano_clock.hpp  xorshift64.hpp
libs/sys/log/: async_drain_loop.hpp  async_log_entry.hpp  async_logger.cpp  async_logger.hpp  log_macros.hpp  signal_logger.hpp
libs/sys/memory/: aligned_array_deleter.hpp  arena_allocator.hpp  fixed_spsc_queue.hpp  global_new_delete.cpp  global_new_delete.hpp  intrusive_lock_free_stack.hpp  lock_free_stack.hpp  mmap_region.cpp  mmap_region.hpp  mmap_utils.cpp  mmap_utils.hpp  object_pool.hpp  single_thread_stack.hpp  spsc_queue.hpp
libs/sys/private/: string_pack.hpp
libs/sys/private/memory/: aligned_new_allocator.hpp  mmap_utils_internal.hpp
libs/sys/thread/: affinity.cpp  affinity.hpp  hot_path_control.cpp  hot_path_control.hpp
tests/: CMakeLists.txt
tests/apps/: CMakeLists.txt
tests/apps/simulated_exchange/: CMakeLists.txt  exchange_core_test.cpp  market_data_publisher_test.cpp  message_codec_framer_test.cpp  mock_udp_socket.hpp  order_gateway_test.cpp  replay_order_gateway_test.cpp  shared_exchange_queue_test.cpp
tests/apps/tick_to_trade/: CMakeLists.txt  feed_handler_test.cpp  order_manager_test.cpp  order_response_handler_test.cpp  order_send_handler_test.cpp  pipeline_log_formatter_test.cpp  strategy_test.cpp
tests/libs/: CMakeLists.txt
tests/libs/algo/: CMakeLists.txt  matching_engine_test.cpp  order_book_test.cpp
tests/libs/ds/: CMakeLists.txt  absl_flat_hash_map_test.cpp  fixed_hash_map_test.cpp  fixed_index_free_stack_test.cpp  fixed_latency_histogram_test.cpp  fixed_latency_recorder_test.cpp  fixed_ring_buffer_test.cpp  fixed_timing_wheel_test.cpp  hash_map_test.cpp  hash_utils_test.cpp  index_free_stack_test.cpp  intrusive_list_test.cpp  ring_buffer_test.cpp  timing_wheel_test.cpp
tests/libs/net/: CMakeLists.txt  epoll_wrapper_test.cpp  length_prefix_codec_test.cpp  message_codec_test.cpp  packed_codec_test.cpp  scoped_fd_test.cpp  socket_base_test.cpp  tcp_server_test.cpp  tcp_socket_test.cpp  udp_socket_test.cpp  wire_reader_test.cpp  wire_writer_test.cpp
tests/libs/sys/: CMakeLists.txt  bit_utils_test.cpp  endian_test.cpp  nano_clock_test.cpp  string_pack_test.cpp  xorshift64_test.cpp
tests/libs/sys/log/: async_drain_loop_test.cpp  async_logger_test.cpp  signal_logger_test.cpp
tests/libs/sys/memory/: aligned_array_deleter_test.cpp  aligned_new_allocator_test.cpp  arena_allocator_test.cpp  fixed_spsc_queue_test.cpp  global_new_delete_test.cpp  intrusive_lock_free_stack_test.cpp  lock_free_stack_test.cpp  mmap_region_test.cpp  mmap_utils_test.cpp  object_pool_test.cpp  single_thread_stack_test.cpp  spsc_queue_test.cpp
tests/libs/sys/thread/: affinity_test.cpp
