mk_add_bench(object_pool_bench                    object_pool_bench.cpp                    mk_sys)
mk_add_bench(spsc_queue_bench                     spsc_queue_bench.cpp                     mk_sys)
mk_add_bench(lock_free_stack_bench                lock_free_stack_bench.cpp                mk_sys)
mk_add_bench(intrusive_lock_free_stack_bench      intrusive_lock_free_stack_bench.cpp      mk_sys)
mk_add_bench(single_thread_stack_bench            single_thread_stack_bench.cpp            mk_sys)
mk_add_bench(nano_clock_bench                     nano_clock_bench.cpp                     mk_sys)
mk_add_bench(endian_bench                         endian_bench.cpp                         mk_sys)
mk_add_bench(bit_utils_bench                      bit_utils_bench.cpp                      mk_sys)
mk_add_bench(mmap_region_bench                    mmap_region_bench.cpp                    mk_sys)
mk_add_bench(arena_allocator_bench                arena_allocator_bench.cpp                mk_sys)
mk_add_bench(xorshift64_bench                    xorshift64_bench.cpp                    mk_sys)
mk_add_bench(signal_logger_bench                 signal_logger_bench.cpp                 mk_sys)
mk_add_bench(async_logger_bench                  async_logger_bench.cpp                  mk_sys)
target_link_libraries(async_logger_bench PRIVATE mk_app_shared)  # pipeline_log_entry.hpp

mk_add_gbench(object_pool_gbench                    object_pool_gbench.cpp                    mk_sys)
mk_add_gbench(spsc_queue_gbench                     spsc_queue_gbench.cpp                     mk_sys)
mk_add_gbench(lock_free_stack_gbench                lock_free_stack_gbench.cpp                mk_sys)
mk_add_gbench(intrusive_lock_free_stack_gbench      intrusive_lock_free_stack_gbench.cpp      mk_sys)
mk_add_gbench(single_thread_stack_gbench            single_thread_stack_gbench.cpp            mk_sys)
mk_add_gbench(nano_clock_gbench                     nano_clock_gbench.cpp                     mk_sys)
mk_add_gbench(endian_gbench                         endian_gbench.cpp                         mk_sys)
mk_add_gbench(bit_utils_gbench                      bit_utils_gbench.cpp                      mk_sys)
mk_add_gbench(mmap_region_gbench                    mmap_region_gbench.cpp                    mk_sys)
mk_add_gbench(arena_allocator_gbench                arena_allocator_gbench.cpp                mk_sys)
mk_add_gbench(xorshift64_gbench                    xorshift64_gbench.cpp                    mk_sys)
mk_add_gbench(signal_logger_gbench                 signal_logger_gbench.cpp                 mk_sys)
